--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -19,6 +19,7 @@ allow 104.192.171.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
+allow 104.219.236.93;
 allow 104.237.158.32;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -108,7 +109,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -151,7 +151,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 156.146.63.136;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -169,7 +168,6 @@ allow 162.251.5.152;
 allow 163.172.213.212;
 allow 163.172.45.102;
 allow 163.5.143.76;
-allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.71.6.109;
 allow 167.99.208.41;
@@ -437,7 +435,6 @@ allow 185.220.101.42;
 allow 185.220.101.43;
 allow 185.220.101.44;
 allow 185.220.101.45;
-allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
@@ -450,7 +447,6 @@ allow 185.220.101.54;
 allow 185.220.101.55;
 allow 185.220.101.56;
 allow 185.220.101.57;
-allow 185.220.101.58;
 allow 185.220.101.59;
 allow 185.220.101.6;
 allow 185.220.101.60;
@@ -692,7 +688,6 @@ allow 199.195.250.165;
 allow 199.195.251.119;
 allow 199.195.251.78;
 allow 199.195.253.124;
-allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
 allow 199.249.230.120;
@@ -806,7 +801,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -828,6 +822,7 @@ allow 204.85.191.9;
 allow 205.185.113.180;
 allow 205.185.116.34;
 allow 205.185.117.149;
+allow 205.185.119.35;
 allow 205.185.121.170;
 allow 205.185.123.93;
 allow 205.185.124.176;
@@ -988,7 +983,6 @@ allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
-allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
 allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
@@ -1397,7 +1391,6 @@ allow 2a0b:f4c2:2::42;
 allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
-allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
@@ -1410,7 +1403,6 @@ allow 2a0b:f4c2:2::54;
 allow 2a0b:f4c2:2::55;
 allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
-allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
@@ -1479,6 +1471,7 @@ allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
+allow 2a0e:fa00:0:d0::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1517,7 +1510,6 @@ allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c80b::2;
 allow 2a12:5940:c814::2;
-allow 2a12:5940:c820::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
@@ -1528,6 +1520,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
+allow 3.228.224.254;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1540,7 +1533,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.206.158.245;
 allow 45.120.178.198;
 allow 45.120.178.253;
 allow 45.120.178.83;
@@ -1598,6 +1590,7 @@ allow 45.8.147.17;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.87.154.151;
+allow 45.9.148.219;
 allow 45.9.150.103;
 allow 45.9.150.130;
 allow 45.92.1.74;
@@ -1688,7 +1681,6 @@ allow 66.175.223.155;
 allow 66.220.242.222;
 allow 66.78.40.139;
 allow 67.219.109.141;
-allow 70.53.133.193;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
@@ -1702,7 +1694,6 @@ allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.232.143.243;
 allow 77.232.143.248;
-allow 77.232.143.255;
 allow 77.48.28.239;
 allow 77.72.85.119;
 allow 77.81.247.72;
@@ -1722,6 +1713,7 @@ allow 80.67.172.162;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
