--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -107,7 +107,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -153,7 +152,6 @@ deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1060:411f:41d8:11fe:716f;
 deny 2605:6400:10:12b:1877:e308:72b3:41b0;
-deny 2605:6400:10:1362::2;
 deny 2605:6400:10:16e:e9da:a184:bfe1:e727;
 deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
@@ -561,7 +559,6 @@ deny 2a0b:f4c2:2::42;
 deny 2a0b:f4c2:2::43;
 deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
-deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
@@ -574,7 +571,6 @@ deny 2a0b:f4c2:2::54;
 deny 2a0b:f4c2:2::55;
 deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
-deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
@@ -643,6 +639,7 @@ deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
+deny 2a0e:fa00:0:d0::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -681,7 +678,6 @@ deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c80b::2;
 deny 2a12:5940:c814::2;
-deny 2a12:5940:c820::2;
 deny 2a12:5940:c826::2;
 deny 2a12:5940:d0e2::2;
 deny 2a12:5940:f0a8::2;
