--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -109,6 +109,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -149,7 +150,6 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
-allow 156.146.63.136;
 allow 160.119.249.240;
 allow 162.247.72.192;
 allow 162.247.72.199;
@@ -435,6 +435,7 @@ allow 185.220.101.42;
 allow 185.220.101.43;
 allow 185.220.101.44;
 allow 185.220.101.45;
+allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
@@ -447,6 +448,7 @@ allow 185.220.101.54;
 allow 185.220.101.55;
 allow 185.220.101.56;
 allow 185.220.101.57;
+allow 185.220.101.58;
 allow 185.220.101.59;
 allow 185.220.101.6;
 allow 185.220.101.60;
@@ -493,7 +495,6 @@ allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
-allow 185.222.66.187;
 allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
@@ -655,7 +656,6 @@ allow 194.233.174.56;
 allow 194.26.192.64;
 allow 194.26.192.77;
 allow 194.28.112.157;
-allow 194.48.250.55;
 allow 195.160.220.104;
 allow 195.176.3.19;
 allow 195.176.3.20;
@@ -688,6 +688,7 @@ allow 199.195.250.165;
 allow 199.195.251.119;
 allow 199.195.251.78;
 allow 199.195.253.124;
+allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
 allow 199.249.230.120;
@@ -801,6 +802,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -844,7 +846,6 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.136.84.104;
-allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -904,8 +905,6 @@ allow 23.137.249.240;
 allow 23.137.249.8;
 allow 23.137.250.34;
 allow 23.137.250.83;
-allow 23.137.251.61;
-allow 23.137.251.62;
 allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
@@ -962,8 +961,6 @@ allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:13:e::1234;
-allow 2602:fc24:13:e::fefe;
 allow 2602:fc24:18:148f::1;
 allow 2602:fc24:18:1be9::1;
 allow 2602:fc24:18:1c54::1;
@@ -983,6 +980,7 @@ allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
+allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
 allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
@@ -1391,6 +1389,7 @@ allow 2a0b:f4c2:2::42;
 allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
+allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
@@ -1403,6 +1402,7 @@ allow 2a0b:f4c2:2::54;
 allow 2a0b:f4c2:2::55;
 allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
+allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
@@ -1520,7 +1520,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.228.224.254;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1671,7 +1670,7 @@ allow 54.36.101.21;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 62.133.45.2;
+allow 54.87.163.166;
 allow 62.171.137.169;
 allow 62.182.84.146;
 allow 64.227.115.78;
@@ -1681,6 +1680,7 @@ allow 66.175.223.155;
 allow 66.220.242.222;
 allow 66.78.40.139;
 allow 67.219.109.141;
+allow 70.53.133.193;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
