--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -151,6 +150,7 @@ allow 152.53.35.204;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -231,7 +231,6 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.235.214.196;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -318,6 +317,7 @@ allow 185.220.100.247;
 allow 185.220.100.248;
 allow 185.220.100.249;
 allow 185.220.100.250;
+allow 185.220.100.251;
 allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
@@ -562,6 +562,7 @@ allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.101.31.57;
+allow 191.252.92.147;
 allow 192.210.255.181;
 allow 192.42.116.13;
 allow 192.42.116.14;
@@ -660,6 +661,7 @@ allow 194.233.174.56;
 allow 194.26.192.64;
 allow 194.26.192.77;
 allow 194.28.112.157;
+allow 194.48.250.177;
 allow 195.160.220.104;
 allow 195.176.3.19;
 allow 195.176.3.20;
@@ -1297,6 +1299,7 @@ allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
+allow 2a0b:f4c0:16c:5::1;
 allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
@@ -1643,6 +1646,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.0.56.159;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1750,7 +1754,6 @@ allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.204.116.211;
 allow 85.204.116.88;
-allow 85.209.176.103;
 allow 85.215.76.62;
 allow 85.93.218.204;
 allow 86.104.194.13;
@@ -1790,7 +1793,6 @@ allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
-allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
@@ -1839,6 +1841,7 @@ allow 94.16.121.226;
 allow 94.16.121.91;
 allow 94.177.106.37;
 allow 94.177.106.46;
+allow 94.177.106.54;
 allow 94.177.106.55;
 allow 94.177.106.59;
 allow 94.228.163.25;
