--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -108,7 +108,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -195,7 +194,6 @@ allow 173.232.195.146;
 allow 173.249.57.253;
 allow 173.255.255.215;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.124.32.173;
 allow 176.126.253.190;
 allow 176.58.100.98;
@@ -722,6 +720,7 @@ allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
+allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
@@ -807,7 +806,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -845,7 +843,6 @@ allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
-allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.69.167.80;
 allow 212.73.134.204;
@@ -1528,7 +1525,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.228.32.121;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1619,6 +1615,7 @@ allow 46.182.21.250;
 allow 46.195.222.207;
 allow 46.226.164.14;
 allow 46.232.251.191;
+allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.243.74.136;
 allow 50.3.182.133;
@@ -1667,6 +1664,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.7.241.168;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
@@ -1737,6 +1735,7 @@ allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.68.49.227;
 allow 83.217.9.73;
+allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
