--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -93,7 +93,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5523;
 allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
-allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -106,6 +105,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -232,7 +232,6 @@ allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
 allow 2607:5300:205:200::163a;
 allow 2607:5300:205:200::4894;
-allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:b500:408:3100::1;
 allow 2607:f530:8002::19;
@@ -685,7 +684,6 @@ allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
-allow 2a12:62c0::254;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
